--- a/index.html
+++ b/index.html
@@ -1,12 +1,67 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
     <title>Patas e Mimos</title>
 </head>
+
 <body>
-    
+    <div class="container">
+        <header>
+            <p>
+                Patas e Mimos
+            </p>
+            <nav>
+                <a href="">
+                    Início
+                </a>
+                <a href="">
+                    Sobre nós
+                </a>
+                <a href="">
+                    Contato
+                </a>
+            </nav>
+        </header>
+
+        <main>
+            <div class="box-content">
+                <div class="cont-promisse">
+
+                    <div class="box-promisse">
+                        <h1>
+                            Cuide do Seu Pet com Amor e Qualidade!
+                        </h1>
+                        <button>
+                            saber mais
+                        </button>
+                    </div>
+
+                    <div class="cont-carrossel">
+                        <div class="box-carrossel">
+                            <div class="arrow">&lt;</div>
+                            <div class="carrossel">
+                                <img src="https://digital.ihg.com/is/image/ihg/holiday-inn-portland-6211152786-4x3" alt="Cachorro">
+                                <img src="https://s3-eu-west-1.amazonaws.com/images.linnlive.com/0d5180a37a8de3cf76052639384dd66f/14f0a3f9-3b87-4a83-a027-f91bb067d4bc.jpg" alt="Cachorro">
+                                <img src="https://cdn.culture.ru/images/86c07386-5c2a-55d8-b5e2-ec41e5534e1e" alt="Cachorro">
+                                <img src="https://user-images.githubusercontent.com/80491863/192076771-375bf3c1-f769-435f-b880-10027b8a934d.png" alt="Gato">
+                                <img src="https://avatars.mds.yandex.net/i?id=e0cea755ef4add06d869eb9f3cd1c29423baecc9-10354750-images-thumbs&n=13" alt="Gato">
+                            </div>
+                            <div class="arrow">&gt;</div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="box-img">
+                    <img src="./img/pet_happy.png" alt="Pets, Cão e Gato">
+                </div>
+            </div>
+        </main>
+    </div>
 </body>
+
 </html>
