Estilização Do Projeto Pronta

--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 <body>
     <div class="container">
         <header>
-            <p>
+            <p class="logo">
                 Patas e Mimos
             </p>
             <nav>
-                <a href="">
+                <a href="#">
                     Início
                 </a>
-                <a href="">
+                <a href="#">
                     Sobre nós
                 </a>
-                <a href="">
+                <a href="#">
                     Contato
                 </a>
             </nav>
