Logica De Progromação Pronta

--- a/index.html
+++ b/index.html
@@ -43,15 +43,17 @@
 
                     <div class="cont-carrossel">
                         <div class="box-carrossel">
-                            <div class="arrow">&lt;</div>
-                            <div class="carrossel">
-                                <img src="https://digital.ihg.com/is/image/ihg/holiday-inn-portland-6211152786-4x3" alt="Cachorro">
-                                <img src="https://s3-eu-west-1.amazonaws.com/images.linnlive.com/0d5180a37a8de3cf76052639384dd66f/14f0a3f9-3b87-4a83-a027-f91bb067d4bc.jpg" alt="Cachorro">
-                                <img src="https://cdn.culture.ru/images/86c07386-5c2a-55d8-b5e2-ec41e5534e1e" alt="Cachorro">
-                                <img src="https://user-images.githubusercontent.com/80491863/192076771-375bf3c1-f769-435f-b880-10027b8a934d.png" alt="Gato">
-                                <img src="https://avatars.mds.yandex.net/i?id=e0cea755ef4add06d869eb9f3cd1c29423baecc9-10354750-images-thumbs&n=13" alt="Gato">
+                            <div class="arrow arrow-left">&lt;</div>
+                            <div class="container-carrossel">
+                                <div class="carrossel">
+                                    <img src="https://digital.ihg.com/is/image/ihg/holiday-inn-portland-6211152786-4x3" alt="Cachorro">
+                                    <img src="https://s3-eu-west-1.amazonaws.com/images.linnlive.com/0d5180a37a8de3cf76052639384dd66f/14f0a3f9-3b87-4a83-a027-f91bb067d4bc.jpg" alt="Cachorro">
+                                    <img src="https://cdn.culture.ru/images/86c07386-5c2a-55d8-b5e2-ec41e5534e1e" alt="Cachorro">
+                                    <img src="https://user-images.githubusercontent.com/80491863/192076771-375bf3c1-f769-435f-b880-10027b8a934d.png" alt="Gato">
+                                    <img src="https://avatars.mds.yandex.net/i?id=e0cea755ef4add06d869eb9f3cd1c29423baecc9-10354750-images-thumbs&n=13" alt="Gato">
+                                </div>
                             </div>
-                            <div class="arrow">&gt;</div>
+                            <div class="arrow arrow-right">&gt;</div>
                         </div>
                     </div>
                 </div>
